{
  "version": 4,
  "terraform_version": "1.15.0",
  "serial": 102,
  "lineage": "24ff0def-309b-c7e8-a470-034f3ccecedc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07561fca1dd5ea591",
            "arn": "arn:aws:ec2:ap-south-2:389547485250:elastic-ip/eipalloc-07561fca1dd5ea591",
            "domain": "vpc",
            "id": "eipalloc-07561fca1dd5ea591",
            "network_border_group": "ap-south-2",
            "public_dns": "ec2-18-61-152-203.ap-south-2.compute.amazonaws.com",
            "public_ip": "18.61.152.203",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "389547485250",
            "id": "eipalloc-07561fca1dd5ea591",
            "region": "ap-south-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pub_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0aa31b568c1e8d622",
            "arn": "arn:aws:ec2:ap-south-2:389547485250:instance/i-0056a49489753e0fd",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0056a49489753e0fd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "hyd_pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a6c5d4e0d1c619b5"
              }
            ],
            "primary_network_interface_id": "eni-0a6c5d4e0d1c619b5",
            "private_dns": "ip-10-0-1-65.ap-south-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.65",
            "public_ip": "18.60.222.38",
            "region": "ap-south-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0945de014e0ac8567",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00382579d9ac8427c",
            "tags": {
              "Name": "pub_server"
            },
            "tags_all": {
              "Name": "pub_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f2c319c6cc509c97"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "389547485250",
            "id": "i-0056a49489753e0fd",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:389547485250:internet-gateway/igw-028f87656b36dae28",
            "id": "igw-028f87656b36dae28",
            "owner_id": "389547485250",
            "region": "ap-south-2",
            "tags": {
              "Name": "my_igw"
            },
            "tags_all": {
              "Name": "my_igw"
            },
            "vpc_id": "vpc-0d1b1c90c8b6f041f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "389547485250",
            "id": "igw-028f87656b36dae28",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07561fca1dd5ea591",
            "association_id": "eipassoc-04c72d03cf49215cd",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0662a1c3c785bf837",
            "network_interface_id": "eni-0a5fb785a31bcb9d2",
            "private_ip": "10.0.1.244",
            "public_ip": "18.61.152.203",
            "region": "ap-south-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00382579d9ac8427c",
            "tags": {
              "Name": "my_NAT_gw"
            },
            "tags_all": {
              "Name": "my_NAT_gw"
            },
            "vpc_id": "vpc-0d1b1c90c8b6f041f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "389547485250",
            "id": "nat-0662a1c3c785bf837",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-028f87656b36dae28",
            "id": "r-rtb-0d55d3b1535b2f3c71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-2",
            "route_table_id": "rtb-0d55d3b1535b2f3c7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "389547485250",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-2",
            "route_table_id": "rtb-0d55d3b1535b2f3c7"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.public_RT",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:389547485250:route-table/rtb-047f0f0db8fd4a7f5",
            "id": "rtb-047f0f0db8fd4a7f5",
            "owner_id": "389547485250",
            "propagating_vgws": [],
            "region": "ap-south-2",
            "route": [],
            "tags": {
              "Name": "private_RT"
            },
            "tags_all": {
              "Name": "private_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1b1c90c8b6f041f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "389547485250",
            "id": "rtb-047f0f0db8fd4a7f5",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:389547485250:route-table/rtb-0d55d3b1535b2f3c7",
            "id": "rtb-0d55d3b1535b2f3c7",
            "owner_id": "389547485250",
            "propagating_vgws": [],
            "region": "ap-south-2",
            "route": [],
            "tags": {
              "Name": "public_RT"
            },
            "tags_all": {
              "Name": "public_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1b1c90c8b6f041f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "389547485250",
            "id": "rtb-0d55d3b1535b2f3c7",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_RT_ASS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a56c0bbc51b99d2d",
            "region": "ap-south-2",
            "route_table_id": "rtb-047f0f0db8fd4a7f5",
            "subnet_id": "subnet-07fef4e4612292cdc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "389547485250",
            "id": "rtbassoc-0a56c0bbc51b99d2d",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_route_table.private_RT",
            "aws_subnet.private_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_RT_ASS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc6ba0cac1cff456",
            "region": "ap-south-2",
            "route_table_id": "rtb-0d55d3b1535b2f3c7",
            "subnet_id": "subnet-00382579d9ac8427c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "389547485250",
            "id": "rtbassoc-0cc6ba0cac1cff456",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_route_table.public_RT",
            "aws_subnet.public_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:389547485250:security-group/sg-09ecfa320ab20b136",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-09ecfa320ab20b136",
            "ingress": [],
            "name": "private_sg",
            "name_prefix": "",
            "owner_id": "389547485250",
            "region": "ap-south-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private_sg"
            },
            "tags_all": {
              "Name": "private_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1b1c90c8b6f041f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "389547485250",
            "id": "sg-09ecfa320ab20b136",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:389547485250:security-group/sg-0f2c319c6cc509c97",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-0f2c319c6cc509c97",
            "ingress": [],
            "name": "public_sg",
            "name_prefix": "",
            "owner_id": "389547485250",
            "region": "ap-south-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public_sg"
            },
            "tags_all": {
              "Name": "public_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1b1c90c8b6f041f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "389547485250",
            "id": "sg-0f2c319c6cc509c97",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:389547485250:subnet/subnet-07fef4e4612292cdc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07fef4e4612292cdc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "389547485250",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "private_subnet"
            },
            "tags_all": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-0d1b1c90c8b6f041f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "389547485250",
            "id": "subnet-07fef4e4612292cdc",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:389547485250:subnet/subnet-00382579d9ac8427c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00382579d9ac8427c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "389547485250",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-2",
            "tags": {
              "Name": "public_subnet"
            },
            "tags_all": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-0d1b1c90c8b6f041f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "389547485250",
            "id": "subnet-00382579d9ac8427c",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:389547485250:vpc/vpc-0d1b1c90c8b6f041f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-064f2e9764e09966d",
            "default_route_table_id": "rtb-05483de0ba00c7d75",
            "default_security_group_id": "sg-09f30fa41762ead5b",
            "dhcp_options_id": "dopt-0675963b69d1cadf2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d1b1c90c8b6f041f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05483de0ba00c7d75",
            "owner_id": "389547485250",
            "region": "ap-south-2",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "389547485250",
            "id": "vpc-0d1b1c90c8b6f041f",
            "region": "ap-south-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "private_sg_egress_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:389547485250:security-group-rule/sgr-050b37a054ca424ab",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-050b37a054ca424ab",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-2",
            "security_group_id": "sg-09ecfa320ab20b136",
            "security_group_rule_id": "sgr-050b37a054ca424ab",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "389547485250",
            "id": "sgr-050b37a054ca424ab",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_security_group.private_sg",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "public_sg_egress_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:389547485250:security-group-rule/sgr-061c7166df8088c16",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-061c7166df8088c16",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-2",
            "security_group_id": "sg-0f2c319c6cc509c97",
            "security_group_rule_id": "sgr-061c7166df8088c16",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "389547485250",
            "id": "sgr-061c7166df8088c16",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "private_sg_ingress_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:389547485250:security-group-rule/sgr-010d97424b7c4599f",
            "cidr_ipv4": "10.0.1.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-010d97424b7c4599f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-2",
            "security_group_id": "sg-09ecfa320ab20b136",
            "security_group_rule_id": "sgr-010d97424b7c4599f",
            "tags": null,
            "tags_all": {},
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "389547485250",
            "id": "sgr-010d97424b7c4599f",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_security_group.private_sg",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "public_sg_ingress_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:389547485250:security-group-rule/sgr-0d5a13b552a362360",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-0d5a13b552a362360",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-2",
            "security_group_id": "sg-0f2c319c6cc509c97",
            "security_group_rule_id": "sgr-0d5a13b552a362360",
            "tags": null,
            "tags_all": {},
            "to_port": 65535
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "389547485250",
            "id": "sgr-0d5a13b552a362360",
            "region": "ap-south-2"
          },
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    }
  ]
}